--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body className="dark">
     <div id="root"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
